Implement tag handling and add unit tests