@@ -16,7 +16,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -28,36 +27,66 @@ public class ContentService {
     private final ContentMapper contentMapper;
     private final ContentValidator contentValidator;
 
-    protected void synchronizeTags(ContentEntity content, List<String> tagNames){
+    public static class TagSynchronizationResult {
+        public final Collection<TagEntity> existingTagsToAdd;
+        public final Collection<TagEntity> newTagsToAdd;
+        public final Collection<TagEntity> existingTagsToRemove;
+
+        public TagSynchronizationResult(Collection<TagEntity> existingTagsToAdd,
+                                        Collection<TagEntity> newTagsToAdd,
+                                        Collection<TagEntity> existingTagsToRemove) {
+            this.existingTagsToAdd = existingTagsToAdd;
+            this.newTagsToAdd = newTagsToAdd;
+            this.existingTagsToRemove = existingTagsToRemove;
+        }
+    }
+
+    TagSynchronizationResult prepareSynchronization(List<String> tagNames,
+                                                    List<TagEntity> currentTags,
+                                                    List<TagEntity> existingTagsWithGivenNames) {
         Set<String> tagNamesSet = new HashSet<>(tagNames);
-        List<TagEntity> currentTags = tagRepository.findByContentId(content.getId());
         Set<String> currentTagNames = currentTags.stream().map(tag -> tag.getName()).collect(Collectors.toSet());
         Set<String> tagNamesToAdd = tagNamesSet.stream().filter(name -> !currentTagNames.contains(name)).collect(Collectors.toSet());
-        List<TagEntity> existingTagsToAdd = tagRepository.findByNames(tagNamesToAdd.stream().toList());
+        List<TagEntity> existingTagsToAdd = existingTagsWithGivenNames.stream().filter(tag -> tagNamesToAdd.contains(tag.getName())).collect(Collectors.toList());
         Set<String> existingTagNames = existingTagsToAdd.stream().map(tag -> tag.getName()).collect(Collectors.toSet());
         Set<String> tagNamesToCreate = tagNamesToAdd.stream().filter(name -> !existingTagNames.contains(name)).collect(Collectors.toSet());
-        Set<TagEntity> newTags = tagNamesToCreate.stream().map(TagEntity::fromName).map(tag -> tagRepository.save(tag)).collect(Collectors.toSet());
-        newTags.addAll(existingTagsToAdd);
+        List<TagEntity> newTags = tagNamesToCreate.stream().map(TagEntity::fromName).collect(Collectors.toList());
+        Set<String> tagNamesToRemove = currentTagNames.stream().filter(name -> !tagNamesSet.contains(name)).collect(Collectors.toSet());
+        List<TagEntity> tagsToRemove = currentTags.stream().filter(tag -> tagNamesToRemove.contains(tag.getName())).collect(Collectors.toList());
+        return new TagSynchronizationResult(existingTagsToAdd,newTags,tagsToRemove);
+    }
+
+    void synchronizeWithDatabase(ContentEntity content, TagSynchronizationResult tagSynchronizationResult) {
+        // the prepareSynchronization created TagEntity instances for new tags but did not store them --> save them to the DB
+        Set<TagEntity> tagsToAdd = tagSynchronizationResult.newTagsToAdd.stream().map(tag -> tagRepository.save(tag)).collect(Collectors.toSet());
+        // the newly created tags and the existing tags which are not already assigned to the content need to be linked with the content
+        // for n:m relationships the links have to be created on both sides, i.e. content -> tag and tag --> content
+        tagsToAdd.addAll(tagSynchronizationResult.existingTagsToAdd);
         if (content.getTags() == null) {
-            content.setTags(newTags);
+            content.setTags(tagsToAdd); // TODO clarify if this can really happen or if an empty list is returned
         } else {
-            content.getTags().addAll(newTags);
+            content.getTags().addAll(tagsToAdd);
         }
-        for (TagEntity tag : newTags) {
+        for (TagEntity tag : tagsToAdd) {
             if (tag.getContents()==null) {
-                HashSet<ContentEntity> contents = new HashSet<>();
-                contents.add(content);
-                tag.setContents(contents);
+                tag.setContents(new HashSet<>(Set.of(content))); // TODO clarify if this can really happen or if an empty list is returned
             } else {
                 tag.getContents().add(content);
             }
         }
-        Set<String> tagNamesToRemove = currentTagNames.stream().filter(name -> !tagNamesSet.contains(name)).collect(Collectors.toSet());
-        Set<TagEntity> tagsToRemove = content.getTags().stream().filter(tag -> tagNamesToRemove.contains(tag.getName())).collect(Collectors.toSet());
-        for (TagEntity tagEntity : tagsToRemove) {
+        // Remove links between content and tag
+        // Note: The tag entity is not deleted from the DB even it is not referenced by any content
+        for (TagEntity tagEntity : tagSynchronizationResult.existingTagsToRemove) {
             content.removeFromTags(tagEntity);
             tagEntity.removeFromContents(content);
         }
+    }
+
+    protected void synchronizeTags(ContentEntity content, List<String> tagNames){
+        List<TagEntity> currentTags = tagRepository.findByContentId(content.getId());
+        List<TagEntity> existingTagsWithGivenNames = tagRepository.findByNames(tagNames);
+        TagSynchronizationResult result = prepareSynchronization(tagNames, currentTags, existingTagsWithGivenNames);
+        synchronizeWithDatabase(content,result);
     }
 
     public List<ContentDto> getAllContents() {
